<resources>
    <string name="app_name">Sensorki</string>
    <string name="battery_icon">battery icon</string>
    <string name="pressure_icon">pressure icon</string>
    <string name="lux_icon">lux icon</string>
    <string name="humidity_icon">humidity icon</string>
    <string name="temperature_icon">temperature icon</string>
    <string name="readings">readings</string>
    <string name="connection_error">Bład połączenia</string>
    <string name="refresh">Odśwież</string>
    <string name="dead_sensor_notification_title">Sensorek poległ!</string>
    <string name="dead_sensor_notification_text">: brak wiadomości od sensorka od </string>
    <string name="recharge_notification_title">Nakarm Sensorka!</string>
    <string name="recharge_notification_text">: bateria Sensorka wymaga naładowania!</string>
    <string name="sensor_channel">sensorki channel</string>
    <string name="sensor_description">Powiadomienia odnośnie sensorków</string>
    <string name="appwidget_text">Sensorek</string>
    <string name="add_widget">Dodaj sensorka</string>
    <string name="temp_outside">Temperatura na balkonie</string>
</resources>
