<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sensor_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/margin_size"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textAlignment="textStart"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/refresh_ic"
        android:layout_width="@dimen/widget_icon_width"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin_size"
        android:contentDescription="@string/temperature_icon"
        android:src="@drawable/ic_rotate" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/temp_outside"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/widget_timestamp_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#fff"
        android:textAlignment="textEnd"
        android:textColor="#000"
        android:textSize="14sp" />

</RelativeLayout>